Closed Bug 422366 Opened 16 years ago Closed 16 years ago

AIX Compilation error for trunk build source nsCOMPtr.h : The base class "nsISelection" is declared but not defined.

Categories

(Core :: Widget: Gtk, defect)

Other
AIX
defect
Not set
major

Tracking

()

RESOLVED FIXED
mozilla1.9beta5

People

(Reporter: shailen.n.jain, Assigned: shailen.n.jain)

Details

Attachments

(1 file)

User-Agent:       Mozilla/5.0 (Windows; U; Windows NT 5.1; en-US; rv:1.8.1.12) Gecko/20080201 Firefox/2.0.0.12
Build Identifier: Mozilla/5.0 (Windows; U; Windows NT 5.1; en-US; rv:1.8.1.12) Gecko/20080201 Firefox/2.0.0.12

While compiling trunk build source /mozilla/widget/src/gtk2/nsDragService.cpp on
AIX, getting below compilation error - 

"../../../dist/include/xpcom/nsCOMPtr.h", line 187.30: 1540-0408 (S) The base class "nsISelection" is declared but not defined.
"../../../dist/include/xpcom/nsCOMPtr.h", line 187.7: 1540-0700 (I) The previous message was produced while processing "class nsDerivedSafe<nsISelection>".
"/mozilla/widget/src/gtk2/nsDragService.cpp", line 152.1: 1540-0700 (I) The previous message was produced while processing "nsDragService::InvokeDragSession(nsIDOMNode *, nsISupportsArray *, nsIScriptableRegion *, PRUint32)".


Reproducible: Always

Steps to Reproduce:
1.Build Mozilla Firefox Trunk build on AIX
2.
3.
Actual Results:  
Build fails with the above errors.

Expected Results:  
No build failure
OS: Other → AIX
Version: unspecified → Trunk
Attached patch Patch V1Splinter Review
Included "nsISelection.h" in mozilla/widget/src/gtk2/nsDragService.cpp to resolve the error
Attachment #308838 - Flags: review?(benjamin)
Comment on attachment 308838 [details] [diff] [review]
Patch V1

I am not a widget peer. Please be careful to select an appropriate reviewer for your patches.
Attachment #308838 - Flags: review?(benjamin) → review?(roc)
Attachment #308838 - Flags: superreview?(roc)
Attachment #308838 - Flags: superreview?(roc) → superreview+
Keywords: checkin-needed
Please don't add checkin-needed until you have approval.
Assignee: nobody → shailen.n.jain
Status: UNCONFIRMED → NEW
Ever confirmed: true
Keywords: checkin-needed
Status: NEW → ASSIGNED
Component: Build Config → Widget: Gtk
Product: Firefox → Core
QA Contact: build.config → gtk
Attachment #308838 - Flags: approval1.9?
Comment on attachment 308838 [details] [diff] [review]
Patch V1

a1.9=beltzner
Attachment #308838 - Flags: approval1.9? → approval1.9+
Keywords: checkin-needed
Checking in widget/src/gtk2/nsDragService.cpp;
/cvsroot/mozilla/widget/src/gtk2/nsDragService.cpp,v  <--  nsDragService.cpp
new revision: 1.23; previous revision: 1.22
done
Status: ASSIGNED → RESOLVED
Closed: 16 years ago
Keywords: checkin-needed
Resolution: --- → FIXED
Target Milestone: --- → mozilla1.9beta5
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: