Bug 422366 - "AIX Compilation error for trunk build source nsCOMPtr.h : The base class "nsISelection" is declared but not defined." [p=shailen.n.jain@gmail.com (Shailen) r+sr=roc a1.9=beltzner]