widget/src/gtk2/nsDragService.cpp
@@ -62,6 +62,7 @@
 #include "nsIPresShell.h"
 #include "nsPresContext.h"
 #include "nsIDocument.h"
+#include "nsISelection.h"
 
 static PRLogModuleInfo *sDragLm = NULL;
 
